[metadata]
name = treex_ui_client
version = 0.1.0
author = Wert-Rar
author_email = wert-rar@mail.ru
description = A python Client for 3X-UI client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wert-rar/ThreeX-Python-Client.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp==3.11.11
    requests==2.32.3

[options.packages.find]
exclude =
    tests*